// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`optional members should infer a detail based on list results 1`] = `
SomeResource {
  "id": "1",
  "name": "fails",
  "things": Array [],
}
`;

exports[`optional members should infer even with nested missing 1`] = `
Object {
  "a": SomeResource {
    "id": "2",
    "name": "works",
    "things": Array [
      Nested {
        "id": "1",
        "name": "first",
      },
      Nested {
        "id": "2",
        "name": "second",
      },
    ],
  },
  "b": Nested {
    "id": "2",
    "name": "second",
  },
}
`;

exports[`optional members should return all members of list without suspending 1`] = `
Array [
  SomeResource {
    "id": "1",
    "name": "fails",
    "things": Array [],
  },
  SomeResource {
    "id": "2",
    "name": "works",
    "things": Array [
      Nested {
        "id": "1",
        "name": "first",
      },
      Nested {
        "id": "2",
        "name": "second",
      },
    ],
  },
  SomeResource {
    "id": "3",
    "name": "works",
    "things": Array [
      Nested {
        "id": "2",
        "name": "second",
      },
    ],
  },
]
`;
